--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 2024
-MONGO_URI =  mongodb+srv://valiantfoothome:fortress2024@cluster0.jkybb8z.mongodb.net/Estate_management
+MONGODB_URI =  mongodb+srv://valiantfoothome:fortress2024@cluster0.jkybb8z.mongodb.net/Estate_management
 SESSION_SECRET = 1988262023valiantfoot
 PASSWORD_EMAIL = rgfpfukqjlbzphxr
 
