--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 2024
-MONGODB_URI = mongodb+srv://valiantfoothomes:<fortress>@valiantfoot.yphbl4z.mongodb.net/EstateManagement
+MONGODB_URI = mongodb+srv://valiantfoothomes:fortress@valiantfoot.yphbl4z.mongodb.net/Estate-Management
 SESSION_SECRET = 1988262023valiantfoot
 PASSWORD_EMAIL = rgfpfukqjlbzphxr
 
