--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "bcrypt": "^5.1.0",
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
+    "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
