--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 PORT = 2024
-MONGODB_URI = mongodb+srv://valiantfoothomes:fortress@valiantfoot.yphbl4z.mongodb.net/Estate_management
+MONGODB_URI = mongodb://127.0.0.1:27017/Estate_management
 SESSION_SECRET = 1988262023valiantfoot
 PASSWORD_EMAIL = rgfpfukqjlbzphxr
 
 
-#  mongodb://127.0.0.1:27017/Estate_management
+ 
+# mongodb+srv://valiantfoothomes:fortress@valiantfoot.yphbl4z.mongodb.net/Estate_management
