--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.4-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.9.1",
     "nodemailer-smtp-pool": "^2.8.3",
     "nodemon": "^2.0.21",
