--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.41.1",
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
@@ -42,6 +43,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4-lts.1",
     "multer-gridfs-storage": "^5.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.1",
     "nodemailer-smtp-pool": "^2.8.3",
     "nodemon": "^2.0.21",
@@ -49,6 +51,7 @@
     "passport-local": "^1.0.0",
     "sharp": "^0.32.0",
     "sharp-multer": "^0.2.5",
+    "streamifier": "^0.1.1",
     "tofixed": "^1.0.0",
     "whatsapp-api-js": "^0.8.2"
   }
